--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>nuestroprimermespage</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Carta de San Valentín</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+
+   
+
+<div class="valentines-day">
+  <div class="envelope"></div>
+  <div class="heart"></div>
+  <div class="text"> PARA: <br> MI AMORCITO </div>
+  <div class="front"></div>
+</div>
+
+<div id="card">
+  <div class="side one"></div>
+  <div class="side two">
+    <h2>Para mi amorcito</h2>
+    <p>Querida AGUS... </p>
+    <p>Eres una persona super especial para mi... </p>
+    <p>Quiero estar contigo toda mi vida, realmente te quiero mucho, espero poder pasar la vida junto a ti</p>
+  </div>
+</div>
+
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src="./script.js"></script>
+
+</body>
+</html>
